# SnakeGame

./: CMakeLists.txt
source/: Application.cpp  Application.hpp  GameLayer.cpp  GameLayer.hpp  Layer.hpp  Main.cpp  Math.cpp  Math.hpp  Snake.cpp  Snake.hpp  SnakeSegment.cpp  SnakeSegment.hpp  pch.hpp
source/game/: Food.cpp  Food.hpp  GameLayer.cpp  GameLayer.hpp  Snake.cpp  Snake.hpp  SnakeSegment.cpp  SnakeSegment.hpp
source/game/snake/: Snake.cpp  Snake.hpp  SnakeSegment.cpp  SnakeSegment.hpp  SnakeTurnPoint.cpp  SnakeTurnPoint.hpp
source/gui/: HUDLayer.cpp  HUDLayer.hpp
